<resources>
    <string name="app_name">MyFirstProject</string>
    <string name="del_btn">Удалить</string>
    <string name="back_btn">Назад</string>
    <string name="create_note_btn">Создать заметку</string>
    <string name="create_new_note_btn">Создать новую заметку</string>
    <string name="select_date_btn">Выбрать дату</string>
    <string name="title_new_note">Новая заметка</string>
    <string name="hint_input_name">Введите название..</string>
    <string name="hint_input_description">Введите описание..</string>
    <string name="inter_btn">Войти</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="example_time">Примеры: 01:00 - 02:00, 02:00 - 03:00</string>
    <string name="enter_password">Введите пароль</string>
    <string-array name="hourslist">
        <item>00:00 - 01:00</item>
        <item>01:00 - 02:00</item>
        <item>02:00 - 03:00</item>
        <item>03:00 - 04:00</item>
        <item>04:00 - 05:00</item>
        <item>05:00 - 06:00</item>
        <item>06:00 - 07:00</item>
        <item>07:00 - 08:00</item>
        <item>08:00 - 09:00</item>
        <item>09:00 - 10:00</item>
        <item>10:00 - 11:00</item>
        <item>11:00 - 12:00</item>
        <item>12:00 - 13:00</item>
        <item>13:00 - 14:00</item>
        <item>14:00 - 15:00</item>
        <item>15:00 - 16:00</item>
        <item>16:00 - 17:00</item>
        <item>17:00 - 18:00</item>
        <item>18:00 - 19:00</item>
        <item>19:00 - 20:00</item>
        <item>20:00 - 21:00</item>
        <item>21:00 - 22:00</item>
        <item>22:00 - 23:00</item>
        <item>23:00 - 00:00</item>
    </string-array>

</resources>