<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.MyFirstProject.NewNoteActivity"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#000"
        android:text="@string/title_new_note"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingVertical="6dp"/>

    <TextView
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/wqe"
        android:text="Дата"
        android:paddingVertical="3dp"
        android:layout_below="@id/title"
        android:gravity="top|center_horizontal" />

    <LinearLayout
        android:id="@id/time"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_date"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:hint="00"
            android:inputType="date"
            android:padding="5dp"
            android:textSize="14sp"
            android:background="@color/common_google_signin_btn_text_light_disabled"/>

        <TextView
            android:id="@+id/minutes1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":00 - "
            android:textColor="#000"
            android:padding="5dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:hint="00"
            android:inputType="date"
            android:padding="5dp"
            android:textSize="14sp"
            android:background="@color/common_google_signin_btn_text_light_disabled"/>
        <TextView
            android:id="@+id/minutes2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text=":00"
            android:padding="5dp"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:text="@string/example_time"
        android:gravity="center"
        android:paddingBottom="7dp"
        android:paddingTop="3dp"
        android:textSize="12sp"/>

    <TableLayout
        android:layout_below="@+id/example"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:paddingVertical="5dp">
            <EditText
                android:id="@+id/et_name"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:background="@color/common_google_signin_btn_text_light_disabled"
                android:hint="@string/hint_input_name"
                android:gravity="left|top"
                android:padding="5dp"
                android:inputType="text"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow android:paddingVertical="5dp">

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:inputType="text"
                android:background="@color/common_google_signin_btn_text_light_disabled"
                android:gravity="left|top"
                android:hint="@string/hint_input_description"
                android:padding="5dp"
                android:textSize="14sp" />
        </TableRow>

        <TableRow android:gravity="center">
            <Button
                android:id="@+id/btn_create_note"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_note_btn" />
        </TableRow>

        <TableRow android:gravity="center">
            <Button
                android:id="@+id/btn_back"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_btn" />
        </TableRow>

    </TableLayout>
</RelativeLayout>